[package]
name = "lazy-wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# octa-force = { path = "../octa-force-rs" }
octa-force = { git = "https://github.com/MaartenBehn/octa-force-rs.git", version = "0.1.17" }
rclite = "0.2.4"
num_enum = "0.7.3"
fastrand = "2.1.0"