[package]
name = "lazy-wfc"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["reloaded"]

[features]
default = []
reload = ["dep:hot-lib-reloader"]

[workspace.dependencies]
# octa-force = { git = "https://github.com/MaartenBehn/octa-force-rs.git", version = "0.2.0" }
octa-force = { path = "../octa-force-rs" }

[dependencies]
octa-force.workspace = true
hot-lib-reloader = { version = "^0.7", optional = true }
reloaded = { path = "reloaded" }
